--- a/MIT.ipynb
+++ b/MIT.ipynb
@@ -6,13 +6,14 @@
    "source": [
     "# The Massachusetts Institute of Technology (MIT)\n",
     "\n",
-    "**Add your full name and GitHub username here**\n",
+    "**Full Name - Neha Singh**  \n",
+    "**GitHub Username - singhne07**\n",
     "\n",
-    "The Massachusetts Institute of Technology (MIT) is a private university in Cambridge, Minnesota. Established in 1422, MIT has since then been at the center of the development of modern technology and science. Since it was founded, MIT has been ranked among the top academic institutions in the world.\n",
+    "The Massachusetts Institute of Technology (MIT) is a private university in Cambridge, Massachusetts. Established in 1861, MIT has since then been at the center of the development of modern technology and science. Since it was founded, MIT has been ranked among the top academic institutions in the world.\n",
     "\n",
-    "The original MIT logo was created by Seymour Papert and it represents two figures symbolizing the fields of Science and Art. The image below displays the original logo.\n",
+    "The original Massachusetts Institute of Technology (MIT) logo was created by William Barton Rogers, the founder of MIT. The design represents two figures symbolizing \"Science.\" and \"Arts\" The image below displays the original logo.\n",
     "\n",
-    "![](image.png)"
+    "<img src=\"MIT_Logo.png\" alt=\"MIT Original Logo\" width=\"300\">"
    ]
   },
   {
